[package]
description = "A collection of utils for Bevy Engine"
edition = "2021"
homepage = "https://bevyengine.org"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_utils"
repository = "https://github.com/bevyengine/bevy"
version = "0.7.0"

[dependencies]
ahash = "0.7.0"
bevy_derive = {path = "../bevy_derive", version = "0.7.0"}
hashbrown = {version = "0.11", features = ["serde"]}
instant = {version = "0.1", features = ["wasm-bindgen"]}
tracing = {version = "0.1"}
uuid = {version = "0.8", features = ["v4", "serde"]}

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version = "0.2.0", features = ["js"]}
uuid = {version = "0.8", features = ["wasm-bindgen"]}
